src/test/deca/codegen/valid/object_methodcal_in_return.deca
// @result 1
/*
Testing for method call in return
*/
class X {
	int aux() {
		return 1;
	}
	int func() {
		return aux();
	}
}
{
	X x = new X();
	println(x.func());
}
