src/test/deca/codegen/invalid/object_field_deref_on_null_object.deca
// @result Error: Cannot acces null object
/*
Testing for field acces on null object
*/
class X {
	int a = 1;
}
{
	X x;
	println(x.a);
}
